# http-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml
public/: index.html  style.css
src/http_server/: __init__.py  __main__.py  middleware.py  request.py  response.py  router.py  server.py  static.py
tests/: __init__.py  test_middleware.py  test_request.py  test_response.py  test_router.py  test_server.py  test_static.py
